examples/test/testpolicy16503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16503
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key21: value9
      key14: value46
      key3: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value36
          key29: value32
      podSelector:
        matchLabels:
          key5: value44
          key36: value42
